
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.95

   * appearance wizard

   * toggle command
 
   * virtual_trackball setting

   * many new menus to support viewer pop-up actions

   * pop-up menus in viewer

   * cascading pop-up menus
   
   * made spheres pickable

   * made cartoons pickable using pickable CGOs : )))

   * finally fixed visible operator to behave as expected

   * massive overhaul of user interface appearance

   * double-clicking actions

   * scrolling actions

   * new selection operations 
      byfragment (byfrag, bf.) 
      bysegment (byseg, bs.)
      bymolecule (bymol, bm. )

   * added setting internal_gui_control_size so that users can decide how
     many lines of buttons they'd like to see.

   * revamped GUI, made buttons look like buttons

   * added ray_blend_colors setting to provide a simple way of
     reducing oversaturation

   * fixed major bug in GRD map reading code & added normalization option

   * fix potential crasher bug with stick_balls

   * SHFT-F# key support, for set_key, scenes, and views

   * cmd.extend now adds help for function (updated test case).

   * various changes here and there for Mac OS/MacPyMOL compatibility

   * extensive work on the metaphorics P5M file format/Fedora stuff

   * massive tinkering with sequence visualization ideas, but nothing
     to show for it yet : (

Changes up to 0.94

   * no_smooth flag to make it easier to combine cartoon and atomistic
     representations

   * fixed yet another ray-tracing alpha channel bug with mixed 
     transparent/opaque objects.

   * new setting overlay_lines, overlay becomes a boolean toggle
